# voter-canvassing

./: .eslintrc  .gitignore  .stylelintrc.json  PRD.md  README.md  REQUIREMENTS.md  package-lock.json  package.json  pyproject.toml
.github/workflows/: test-core-requirements.yml
site/: index.html
site-Zoe/: index.html
site-Zoe/css/: styles.css
site-Zoe/data/: election_lookup.json  political_party_lookup.json
site-Zoe/data/voters_lists/: 0101.csv  0102.csv  0103.csv  0104.csv  0105.csv  0106.csv  0107.csv  0108.csv  0109.csv  0110.csv  0111.csv  0112.csv  0113.csv  0114.csv  0115.csv  0116.csv  0117.csv  0118.csv  0119.csv  0120.csv  0121.csv  0201.csv  0202.csv  0203.csv  0204.csv  0205.csv  0206.csv  0207.csv  0208.csv  0209.csv  0210.csv  0211.csv  0212.csv  0213.csv  0214.csv  0215.csv  0216.csv  0217.csv  0218.csv  0219.csv  (+1663 more)
site-Zoe/js/: inventory.js  main.js  map.js  template-tools.js  voter-info-form.js  voter-list.js
site/css/: styles.css
site/data/voters_lists/: 0101.csv  0102.csv  0103.csv  0104.csv  0105.csv  0106.csv  0107.csv  0108.csv  0109.csv  0110.csv  0111.csv  0112.csv  0113.csv  0114.csv  0115.csv  0116.csv  0117.csv  0118.csv  0119.csv  0120.csv  0121.csv  0201.csv  0202.csv  0203.csv  0204.csv  0205.csv  0206.csv  0207.csv  0208.csv  0209.csv  0210.csv  0211.csv  0212.csv  0213.csv  0214.csv  0215.csv  0216.csv  0217.csv  0218.csv  0219.csv  (+1663 more)
site/js/: CSV-List.js  Inventory.js  VoterMap.js  main.js  toast.js  voter-info-form.js  voterCanvassing-map.js
