[tool.poetry]
name = "voter-canvassing"
version = "0.1.0"
description = ""
authors = ["Mjumbe Poe <mjumbewu@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
click = "^8.1.3"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
